# CaLiForce

./: .gitignore  README.md  pyproject.toml  setup.py
CaLiForce/: compute.py  frequency_summation.py  plane.py
CaLiForce/materials/: SiC.py  aAl2O3.py  fused_silica.py  pec.py  teflon.py
califorcia/: interaction.py  plane.py
califorcia/materials/: Si.py  ethanol.py  polystyrene.py  silica.py
casimir_planeplane/: compute.py  frequency_summation.py  interaction.py  plane.py
casimir_planeplane/materials/: SiC.py  aSiO2.py  ethanol.py  gold.py  gold_plasma.py  polystyrene.py  teflon.py
examples/: example1.py  example2.py  example3.py  example4.py
tests/: ideas.txt  test_results.py
