[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 58.1.0',
    'numpy >= 1.26.4',
    'scipy >= 1.12.0',
]

[project]
name = 'califorcia'
authors = [
    {name = 'Benjamin Spreng', email = 'sprengjamin@gmail.com'},
]
readme = 'README.md'
requires-python = '>=3.7'
classifiers = ['License :: OSI Approved :: MIT License']
dynamic = ['version', 'description', 'license']
dependencies = [
    'numpy >= 1.26.4',
    'scipy >= 1.12.0',
]
